# flussomodoro

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  flake.nix
.github/workflows/: labels.yml
bin-font/: font  font-binary
migrations/2022-03-19-145314_init-db/: down.sql  up.sql
src/: app.rs  counter.rs  db.rs  lib.rs  main.rs  schema.rs  terminal.rs  ui.rs
src/ui/: pages.rs  styles.rs
tests/: counter.rs
time_fmt/: Cargo.toml
time_fmt/src/: lib.rs
tui_circular_gauge/: Cargo.toml
tui_circular_gauge/src/: lib.rs
tui_flusso_widgets/: Cargo.toml
tui_flusso_widgets/src/: aligned_tabs.rs  ascii.rs  circular_gauge.rs  font.rs  lib.rs
