[package]
name = "flussomodoro"
authors = ["Tyler J. Russell"]
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.5", features = [
	"std",
	"color",
	"derive",
	"cargo",
	"wrap_help",
], default-features = false }
crossterm = { version = "0.23.0", features = ["event-stream"] }
derivative = "2.2.0"
futures = "0.3.21"
notify-rust = "4.5.6"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tui = { version = "0.17.0", features = ["crossterm"], default-features = false }
tui_flusso_widgets = { path = "tui_flusso_widgets" }
time_fmt = { path = "time_fmt" }
crossbeam-channel = "0.5.2"
dirs = "4.0.0"
diesel = { version = "2.2.8", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }

[features]

[profile.release]
strip = true
opt-level = 3
lto = true
