[package]
name = "flussomodoro"
authors = ["Tyler J. Russell"]
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = [
	"std",
	"color",
	"derive",
	"cargo",
	"wrap_help",
], default-features = false }
crossterm = { version = "0.29.0", features = ["event-stream"] }
derivative = "2.2.0"
futures = "0.3.31"
notify-rust = "4.11.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tui_flusso_widgets = { path = "tui_flusso_widgets" }
time_fmt = { path = "time_fmt" }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
diesel = { version = "2.3.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.3.0", features = ["sqlite"] }
ratatui = "0.29.0"

[features]

[profile.release]
strip = true
opt-level = 3
lto = true
